--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,6 @@ dependencies {
     dependencies {
         implementation 'com.makeramen:roundedimageview:2.3.0'
     }
+
+    implementation 'com.android.volley:volley:1.1.0'
 }
