--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,17 +19,18 @@
         <activity android:name=".activities.WeatherActivity" />
         <activity android:name=".activities.PlayFromDeviceActivity" />
         <activity android:name=".activities.MusicDeviceActivity" />
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
         <activity
-            android:windowSoftInputMode="stateVisible|adjustPan"
-            android:configChanges="keyboardHidden|keyboard"
             android:name=".activities.PlaySongActivity"
+            android:configChanges="keyboardHidden|keyboard"
             android:finishOnTaskLaunch="true"
             android:launchMode="singleInstance"
-            android:theme="@style/FullScreen" />
+            android:theme="@style/FullScreen"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
 
         <provider
             android:name="com.facebook.FacebookContentProvider"
@@ -44,7 +45,10 @@
         <activity
             android:name=".activities.MainActivity"
             android:launchMode="singleTop"
-            android:usesCleartextTraffic="true">
+            android:usesCleartextTraffic="true"></activity>
+        <activity
+            android:name=".activities.SlashScreen"
+            android:theme="@style/SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
