--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     dependencies {
         implementation 'com.makeramen:roundedimageview:2.3.0'
     }
-
+    implementation 'androidx.media:media:1.1.0'
     implementation 'com.android.volley:volley:1.1.0'
+    implementation "com.android.support:support-compat:28.0.0"
 }
