--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:launchMode="singleTop"
-            android:usesCleartextTraffic="true"></activity>
+            android:usesCleartextTraffic="true" />
         <activity
             android:name=".activities.SlashScreen"
             android:theme="@style/SplashScreen">
