--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,7 @@ dependencies {
     }
     implementation 'androidx.media:media:1.1.0'
     implementation 'com.android.volley:volley:1.1.0'
-    implementation "com.android.support:support-compat:28.0.0"
+    dependencies {
+        implementation "com.android.support:support-compat:28.0.0"
+    }
 }
