--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -41,8 +42,9 @@
         <activity android:name=".activities.GenreFromTopicActivity" />
         <activity android:name=".activities.ListTopicActivity" />
         <activity android:name=".activities.ListPlaylistActivity" />
-        <activity android:name=".activities.SongsActivity"
-            android:launchMode="singleTop"/>
+        <activity
+            android:name=".activities.SongsActivity"
+            android:launchMode="singleTop" />
         <activity
             android:name=".activities.MainActivity"
             android:launchMode="singleTop"
